<resources>

    <string name="enter">进入</string>
    <string name="exit">退出</string>
    <string name="download">下载</string>
    <string name="download_error">下载失败</string>
    <string name="retry">重试</string>
    <string name="waitting">请稍后&#8230;</string>
    <string name="loading_error">加载失败，请稍后重试</string>
    <string name="loading_error_click">加载失败，请点击重试</string>
    <string name="reload">重新加载</string>
    <string name="pause">暂停</string>
    <string name="resume">继续</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="submit">提交</string>
    <string name="html_alert_title">网页对话框</string>
    <string name="share">分享</string>
    <string name="share_qq">QQ</string>
    <string name="share_wx">微信</string>
    <string name="share_wxf">朋友圈</string>
    <string name="share_sms">短信</string>
    <string name="login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_failure">登录失败，请检查邮箱和密码是否正确</string>
    <string name="logining">登录中&#8230;</string>
    <string name="regist">注册</string>
    <string name="regist_success">注册成功</string>
    <string name="regist_failure">注册失败\n如果注册过，请直接登录</string>
    <string name="logout">退出登录</string>
    <string name="share_to">分享到</string>
    <string name="share_to_friend">分享给朋友</string>
    <string name="take_picture">拍照</string>
    <string name="choose_picture">选择图片</string>

</resources>